--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vue/eslint-config-prettier": "^9.0.0",
     "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
+    "vite": "^5.3.5",
     "vite-plugin-vue-devtools": "^7.3.1"
   }
 }
